docs: make class signature bar 100% width

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -5,6 +5,14 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+dt.sig {
+  width: 100%;
+}
+
+.viewcode-link {
+  float: right;
+}
+
 .wy-menu-vertical p.caption {
   color: #ffffff;
 }
