docs: add initial os/env installation table

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -40,3 +40,71 @@ dt.sig {
 .wy-table-responsive table.longtable th {
   white-space: normal;
 }
+
+/* Installation quickstart
+ * This quickstart installation is a hack of the awesome
+ * https://spacy.io/usage/#quickstart page.
+ * See the original javascript implementation
+ * https://github.com/ines/quickstart
+ */
+
+/* style input radio and checkbox */
+div.install > input {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  opacity: 0;
+}
+
+/* Style the button */
+div.install > label {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 5px 11px;
+  background-color: #fff3cd;
+  border: none;
+  border-radius: 3px;
+  color: black;
+}
+
+div.install > label:hover {
+  cursor: pointer;
+}
+
+/* Style the button when the checkbox is checked */
+div.install > input:checked + label {
+  background-color: #ff9c34;
+  color: white;
+}
+
+/* Hide expandable content by default */
+.pkd-expandable {
+  display: none;
+}
+
+div.highlight span.pkd-expandable:before {
+  content: "> ";
+}
+
+/* Show hidden content when the checkbox is checked */
+#quickstart-cond:checked ~ * [data-venv="conda"] {
+  display: block;
+}
+
+#quickstart-venv:checked ~ * [data-venv="venv"] {
+  display: block;
+}
+
+#quickstart-none:checked ~ * [data-venv="none"] {
+  display: block;
+}
+
+#quickstart-win:not(:checked) ~ * [data-os="windows"] {
+  display: none;
+}
+#quickstart-lin:not(:checked) ~ * [data-os="linux"] {
+  display: none;
+}
+#quickstart-mac:not(:checked) ~ * [data-os="mac"] {
+  display: none;
+}
