--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -73,7 +73,7 @@ div.install > label:hover {
 
 /* Style the button when the checkbox is checked */
 div.install > input:checked + label {
-  background-color: #ff9c34;
+  background-color: #a76d60;
   color: white;
 }
 
