Add tutorial convention section, customised 'Terminal Session' with colored text, change ~ to ~user

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -129,3 +129,13 @@ div.highlight span.pkd-expandable:before {
 .orange {
   color: orange;
 }
+
+.heading {
+  font-weight: bold;
+  color: white;
+  background-color: steelblue;
+  font-size: 120%;
+}
+
+
+
