Change 'Terminal Session' box to use rst 'admonition' directive

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -130,12 +130,18 @@ div.highlight span.pkd-expandable:before {
   color: orange;
 }
 
-.heading {
-  font-weight: bold;
-  color: white;
-  background-color: steelblue;
-  font-size: 120%;
+.admonition-terminal-session.admonition {
+  background-color: white;
+  color: black;
 }
 
+.admonition-terminal-session .admonition-title {
+  font-weight: bold;
+  background-color: darkslategray;
+  color: darkseagreen;
+}
 
+.admonition-terminal-session .admonition-title::before {
+  content: "🖥";
+}
 
