--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -32,3 +32,25 @@ body {
 .wy-table-responsive table.longtable th {
   white-space: normal;
 }
+
+div.deprecated, div.versionchanged {
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 1px solid #ddd;
+
+}
+
+div.deprecated {
+  color: #b94a48;
+  background-color: #F3E5E5;
+  border-color: #eed3d7;
+}
+
+div.versionchanged {
+  background-color: #FFFBE8;
+  border-color: #fbeed5;
+}
+
+
