docs: add css for toggle and change convention table header

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -41,13 +41,13 @@ dt.sig {
   white-space: normal;
 }
 
-/* Installation quickstart
+/*****************************************************************************
+ * Installation quickstart
  * This quickstart installation is a hack of the awesome
  * https://spacy.io/usage/#quickstart page.
  * See the original javascript implementation
  * https://github.com/ines/quickstart
- */
-
+ *****************************************************************************/
 /* style input radio and checkbox */
 div.install > input {
   -moz-appearance: none;
@@ -130,6 +130,9 @@ div.highlight span.pkd-expandable:before {
   color: orange;
 }
 
+/*****************************************************************************
+ * Terminal session box
+ *****************************************************************************/
 .admonition-terminal-session.admonition {
   background-color: white;
   color: black;
@@ -146,7 +149,27 @@ div.highlight span.pkd-expandable:before {
 }
 
 .admonition-terminal-session .line {
-  font-family:'Courier New', Courier, monospace;
-  font-size: 1.0em;
-  line-height: 1.0em;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1em;
+  line-height: 1em;
+}
+
+/*****************************************************************************
+ * Toggle container
+ *****************************************************************************/
+.toggle .header {
+  display: block;
+  clear: both;
+}
+
+.toggle .header p {
+  display: inline;
+}
+
+.toggle .header:before {
+  content: "▶";
+}
+
+.toggle .header.open:before {
+  content: "▼";
 }
