node: minor refactor to code, docstrings and tests

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -61,6 +61,7 @@ div.versionchanged {
   border-color: #fbeed5;
 }
 
+/*****************************************************************************
 /* Installation quickstart
  * This quickstart installation is a hack of the awesome
  * https://spacy.io/usage/#quickstart page.
