docs: change page width CSS from 1000px to 90%

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -20,7 +20,7 @@ dt.sig {
 .wy-nav-content {
   padding: 1.618em 3.236em;
   height: 100%;
-  max-width: 1000px;
+  max-width: 90%;
   margin: auto;
 }
 
