docs: change user-typed text to green, minor edits

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -142,6 +142,12 @@ div.highlight span.pkd-expandable:before {
   color: green;
 }
 
+.greenbox {
+  color: green;
+  padding: 2px;
+  border: 1px solid rgba(161, 236, 143, 0.5);
+}
+
 .yellow {
   color: yellow;
 }
