docs: add separate install instruction for M1 for notebook tutorial

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -106,6 +106,10 @@ div.highlight span.pkd-expandable:before {
   content: "> ";
 }
 
+div.highlight span.pkd-raw-terminal:before {
+  content: "> ";
+}
+
 /* Show hidden content when the checkbox is checked */
 #quickstart-cond:checked ~ * [data-venv="conda"] {
   display: block;
