feat: change color palette documentation to a show/hide toggle with page tabs

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -133,6 +133,19 @@ div.highlight span.pkd-raw-terminal:before {
   display: none;
 }
 
+/*****************************************************************************
+ * Color palette
+ * Adapted from "Installation quickstart"
+ *****************************************************************************/
+/* Show hidden content when the checkbox is checked */
+#sort-by-hue:checked ~ * [data-sort="hue"] {
+  display: block;
+}
+
+#sort-by-name:checked ~ * [data-sort="name"] {
+  display: block;
+}
+
 /* Colors */
 .red {
   color: red;
