fix: set white-space CSS property to nowrap for code elements in autosummary table

--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -41,6 +41,11 @@ dt.sig {
   white-space: normal;
 }
 
+.wy-table-responsive table.longtable td code,
+.wy-table-responsive table.longtable th code {
+  white-space: nowrap;
+}
+
 div.deprecated,
 div.versionchanged {
   margin-top: 0.5rem;
