--- a/docs/source/_static/css/pkdk.css
+++ b/docs/source/_static/css/pkdk.css
@@ -180,7 +180,7 @@ div.highlight span.pkd-raw-terminal:before {
 }
 
 .grey {
-   color: #c2c2c2;
+   color: grey;
 }
 
 /*****************************************************************************
